# atp

./: .gitattributes  .gitignore  .merlin  .ocamlformat  CHANGELOG.md  GNUmakefile  README.md  atp.cabal  atp.opam  configure  dune-project  flake.nix
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
include/: intro_simplify.def
lib/: dune
lib/intro/: .merlin  dune  input.ml  input.mli  intro.ml  intro.mli  intro__input.mli  intro__lexer.mll  intro__parser.mly  intro__semantics.ml  intro__semantics.mli  intro__syntax.ml  intro__syntax.mli  intro_lexer.mll  intro_parser.mly  intro_semantics.ml  intro_syntax.ml  lexer.mll  parser.mly  semantics.ml  semantics.mli  syntax.ml  syntax.mli
lib/prop_logic/: .merlin  dune  function.ml  function.mli  function_intf.ml  input.ml  lexer.mll  parser.mly  prop_logic.ml  prop_logic.mli  prop_logic__input.ml  prop_logic__lexer.mll  prop_logic__parser.mly  prop_logic__semantics.ml  prop_logic__semantics.mli  prop_logic__syntax.ml  prop_logic__syntax.mli  prop_logic_lexer.mll  prop_logic_parser.mly  prop_logic_semantics_internal.ml  prop_logic_syntax.ml  semantics.ml  semantics.mli  semantics_internal.ml  syntax.ml  syntax.mli
note/: defaults.yml  dune  prop_logic.md
ppx/: dune  ppx_intro.ml  ppx_prop.ml
src/Intro/: Lexer.x  Parser.y  Quote.hs  Semantics.hs  Syntax.hs
src/Math/ATP/Intro/: Lexer.x  Parser.y  Quote.hs  Semantics.hs  Syntax.hs
src/Prop/: Lexer.x  Parser.y  Quote.hs  Syntax.hs
src/PropLogic/: Lexer.x  Parser.y  Quote.hs  Semantics.hs  Syntax.hs
src/PropLogic/Semantics/: Func.hs  Function.hs
test/: .merlin  Intro.hs  Main.hs  Prop.hs  PropLogic.hs  dune  intro.t  prop_logic.md  prop_logic.t  prop_logic_test.ml  setup.sh  test_intro.ml  test_prop_logic.ml
test-golden/: Main.hs  README.md  truthtable-example.out  truthtable-p036-example.out  truthtable-p039-peirce.out  truthtable-p040-contradiction.out  truthtable-p056-example.out
test/Intro/: QuoteTest.hs  QuoteTests.hs  SemanticsTest.hs  SemanticsTests.hs  SyntaxTest.hs  SyntaxTests.hs
test/Intro/SemanticsTest/: Data.hs
test/Intro/SemanticsTests/: Data.hs
test/Math/ATP/Intro/: Tests.hs
test/Math/ATP/Intro/Quote/: Tests.hs
test/Math/ATP/Intro/Semantics/: Tests.hs
test/Prop/: SyntaxTests.hs
test/PropLogic/: Properties.hs  SemanticsTest.hs  SemanticsTests.hs  SyntaxTest.hs  SyntaxTests.hs
test/intro/: dune  intro_cli.t  intro_simplify.def  intro_simplify_partial.def  intro_simplify_with_count.def  intro_test.ml  intro_test_data.ml.in  ppx_intro_test.ml
test/prop_logic/: README.md  dune  ppx_prop_test.ml  prop_logic_cli.t  prop_logic_test.ml
