cabal-version:      3.0
name:               atp
version:            0.1.0.0
synopsis:           Handbook of Practical Logic and Automated Reasoning
-- description:
license:            Unlicense
license-file:       UNLICENSE
author:             Henry Till
maintainer:         henrytill@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:              warnings
    exposed-modules:     Intro.Lexer
                         Intro.Parser
                         Intro.Quote
                         Intro.Semantics
                         Intro.Syntax
    -- other-modules:
    -- other-extensions:
    build-depends:       base             >=4.17 && <5,
                         array            >=0.5  && <0.6,
                         pretty           >=1.1  && <1.2,
                         syb              >=0.7  && <0.8,
                         template-haskell >=2.12 && <2.22
    build-tool-depends:  alex:alex        >=3.2,
                         happy:happy      >=1.19
    hs-source-dirs:      src
    default-language:    Haskell98
    default-extensions:  ImportQualifiedPost

executable atp
    import:              warnings
    main-is:             Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:       base >=4.17 && <5,
                         atp
    hs-source-dirs:      exe
    default-language:    Haskell98
    default-extensions:  ImportQualifiedPost

test-suite atp-test
    import:              warnings
    main-is:             Main.hs
    type:                exitcode-stdio-1.0
    other-modules:       Intro
                         Intro.QuoteTests
                         Intro.SemanticsTests
                         Intro.SyntaxTests
    -- other-extensions:
    build-depends:       base        >=4.17 && <5,
                         tasty       >=1.0  && <1.6,
                         tasty-hunit >=0.10 && <0.11,
                         atp
    hs-source-dirs:      test
    default-language:    Haskell98
    default-extensions:  ImportQualifiedPost
