opam-version: "2.0"
synopsis: "Handbook of Practical Logic and Automated Reasoning"
description: "Work from Harrison's \"Handbook of Practical Logic and Automated Reasoning\""
maintainer: ["Henry Till <henrytill@gmail.com>"]
authors: ["Henry Till <henrytill@gmail.com>"]
license: "Unlicense"
homepage: "https://github.com/henrytill/atp"
bug-reports: "https://github.com/henrytill/atp/issues"
depends: [
  "ocaml"
  "menhir"
  "ocamlfind" {with-test}
  "alcotest" {with-test & >= "1.7.0"}
  "odoc" {with-doc}
]
build: [make "all" "check" {with-test}]
install: [make "PREFIX=%{prefix}%" "install"]
run-test: [make "check"]
dev-repo: "git+https://github.com/henrytill/atp.git"
