opam-version: "2.0"
synopsis: "Handbook of Practical Logic and Automated Reasoning"
description: "Work from Harrison's \"Handbook of Practical Logic and Automated Reasoning\""
maintainer: ["Henry Till <henrytill@gmail.com>"]
authors: ["Henry Till <henrytill@gmail.com>"]
license: "Unlicense"
homepage: "https://github.com/henrytill/atp"
bug-reports: "https://github.com/henrytill/atp/issues"
depends: [
  "ocaml"
  "ocamlfind"
  "menhir"
  "zarith" {>= "1.14"}
  "alcotest" {with-test & >= "1.7.0"}
  "conf-python-3" {with-test}
  "odoc" {with-doc}
]
build: [
  ["./configure" "-d" "_build"]
  [make "-C" "_build" "all" "check" {with-test}]
]
install: [make "DESTDIR=%{prefix}%" "install"]
run-test: [make "check"]
dev-repo: "git+https://github.com/henrytill/atp.git"
