(library
 (name ppx_intro)
 (modules ppx_intro)
 (public_name atp.ppx_intro)
 (kind ppx_rewriter)
 (libraries ppxlib intro)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (name ppx_prop)
 (modules ppx_prop)
 (public_name atp.ppx_prop)
 (kind ppx_rewriter)
 (libraries ppxlib prop_logic)
 (preprocess
  (pps ppxlib.metaquot)))
