(mdx
 (deps
  (package atp))
 (libraries ppx_prop))

(test
 (name ppx_prop_test)
 (modules ppx_prop_test)
 (libraries prop_logic)
 (preprocess
  (pps ppx_prop)))

(test
 (name prop_logic_test)
 (modules prop_logic_test)
 (libraries alcotest prop_logic)
 (preprocess
  (pps ppx_prop)))

(rule
 (target prop_logic.html)
 (deps README.md)
 (action
  (run
   pandoc
   %{deps}
   -f
   gfm
   -t
   html
   --katex
   --no-highlight
   --standalone
   --metadata
   "title=Propositional Logic"
   --wrap=none
   --variable
   "maxwidth=40em"
   -o
   %{target})))
